test/Fail/PureLambda.err
PureLambda.agda:4.1-5.22: error: [NotStrictlyPositive]
D is not strictly positive, because it occurs
to the left of an arrow
in the type of the constructor lam
in the definition of D.
